# avito-backend-course

./: README.md  docker-compose.yaml  model.pkl  pyproject.toml
migrations/: V1__create_users_and_items.sql  V2__create_moderation_results.sql  V3__add_is_closed_to_items.sql  V4__rename_tables.sql  V5__add_is_closed_to_items.sql
src/: db.py  main.py
src/api/: moderation.py  routers.py
src/clients/: kafka.py  redis.py
src/ml/: model.py
src/repositories/: ad.py  cache.py  db.py  items.py  moderation_results.py  seller.py  users.py
src/schemas/: ad.py  moderation.py
src/services/: moderation.py
src/workers/: moderation_worker.py
tests/: conftest.py  test_cache_repository.py  test_close_integration.py  test_kafka_integration.py  test_moderation.py  test_postgres_integration.py  test_redis_integration.py  test_repositories.py
