[project]
name = "avito-backend-course"
version = "0.1.0"
description = "Homework assignments for the course Backend development in the Master's program Machine Learning in a Digital Product (HSE University, Faculty of Computer Science & Avito)"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi[standard]==0.128.0",
    "numpy==2.4.1",
    "scikit-learn==1.8.0",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.14.9",
    "ty==0.0.12",
    "pytest==8.0.0",
    "httpx==0.27.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100
